--- a/_posts/2018-08-19-11726.md
+++ b/_posts/2018-08-19-11726.md
@@ -17,8 +17,7 @@ d[0] = 1
 d[1] = 1
 
 for i in range(2, N+1):
-  tmp = d[i-1] + d[i-2]
-  d[i] = tmp % 10007
+  d[i] = d[i-1] + d[i-2]
 
-print(d[N])
+print(d[N]% 10007)
 ```
