--- a/_posts/2018-08-03-11057.md
+++ b/_posts/2018-08-03-11057.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 11057번 : 오르막 수 with python3"
+title: "[백준] 11057번 : 오르막 수 with python3, cpp"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
 ---
 
-```
+``` python
 N = int(input())
 D = [[0] * 10 for _ in range(N + 1) ]
 mod = 10007
@@ -23,5 +23,34 @@ ans = 0
 for i in range(0,10):
     ans += D[N][i]
 print(ans%mod)
+
+```
+
+``` cpp
+#include <iostream>
+using namespace std;
+long long d[1001][10];
+int main() {
+    int n;
+    cin >> n;
+    for (int i=0; i<=9; i++)
+        d[1][i] = 1;
+
+    for (int i=2; i<=n; i++) {
+        for (int j=0; j<=9; j++) {
+            for (int k=0; k<=j; k++) {
+                d[i][j] += d[i-1][k];
+                d[i][j] %= 10007;
+            }
+        }
+    }
+    long long ans = 0;
+    for (int i=0; i<10; i++)
+        ans  += d[n][i];
+
+    ans %= 10007;
+    cout << ans << '\n';
+    return 0;
+}
 
 ```
