--- a/_posts/2018-08-03-2193.md
+++ b/_posts/2018-08-03-2193.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 2193번 : 이친수 with python3"
+title: "[백준] 2193번 : 이친수 with python3, cpp"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
@@ -43,3 +43,29 @@ print(D[N][0]+D[N][1])
 D[N][L]에서 N은 글자의 길이 L은 마지막 수이다.
 1이 연속되면 안됨으로 D[i][1]은 D[i-1][0]만 더한다.
 0은 아무거나 됨으로 저렇 다 더한다(?)
+
+
+``` cpp
+
+#include <iostream>
+using namespace std;
+long long d[1001][2];
+int main() {
+    int n;
+    cin >> n;
+    d[1][0] = 0;
+    d[1][1] = 1;
+
+    for (int i=2; i<=n; i++) {
+        d[i][0] = d[i-1][0] + d[i-1][1];
+        d[i][1] = d[i-1][0];
+    }
+    long long ans = 0;
+    for (int i=0; i<2; i++)
+        ans  += d[n][i];
+
+    cout << ans << '\n';
+    return 0;
+}
+
+```
