tail_recursion 설명 달아놓기

--- a/_posts/2018-08-18-1463.md
+++ b/_posts/2018-08-18-1463.md
@@ -14,7 +14,6 @@ https://www.acmicpc.net/problem/1463
 n = int(input())
 d = [0]*(n+1)
 
-d[1] = 0
 
 # bottom-up
 for i in range(2, n+1):
@@ -42,3 +41,16 @@ def go(n):
     return d[n]
 print(go(n))
 ```
+
+top-down으로 풀면 python의 경우 콜스택이 터진다.
+이는
+``` python
+import sys
+sys.setrecursionlimit(1000011)
+```
+을 추가하면 급 메모리초과가 뜸으로 콜스택이 터졌다는 것을 알 수 있다.
+이는 파이선이 tail_recursion_optimize가 안되서 인데
+관련된 글은
+
+https://joosjuliet.github.io/tail_recursion/
+여기있다.
