--- a/_posts/2018-08-19-11053.md
+++ b/_posts/2018-08-19-11053.md
@@ -1,19 +1,18 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 11053번 : 가장 긴 증가하는 부분 수열 with python3"
+title: "[백준] 11053번 : 가장 긴 증가하는 부분 수열 with python3, cpp"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
 ---
 
-```python3
+``` python3
 n = int(input())
 a = list(map(int, input().split()))
-d = [0]*(n+1)
+d = [1]*(n+1)
 
 for i in range(0,n):
-    d[i] = 1
     for j in range(0,i):
         if a[j] < a[i] and d[i] < d[j]+1:
             d[i] = d[j] + 1
@@ -21,4 +20,30 @@ for i in range(0,n):
 print(max(d))
 ```
 
+``` c
+#include <iostream>
+#include <algorithm>
+#include <vector>
+using namespace std;
+int main() {
+  int n;
+  cin >> n;
+  vector<int> a(n);
+  for (int i=0; i<n; i++) {
+      cin >> a[i];
+  }
+  vector<int> d(n);
+  for (int i=0; i<n; i++) {
+      d[i] = 1;
+      for (int j=0; j<i; j++) {
+          if (a[j] < a[i] && d[j]+1 > d[i]) {
+              d[i] = d[j]+1;
+          }
+      }
+  }  
+  cout << *max_element(d.begin(),d.end()) << '\n';
+  return 0;
+}
+
+```
 d는 그 숫자를 기준으로 가장 긴 수열을 값에 넣는다.
