--- a/_posts/2018-08-19-11053.md
+++ b/_posts/2018-08-19-11053.md
@@ -7,7 +7,7 @@ tags: [ 'algorithm', '백준' ]
 comments: true
 ---
 
-``` python3
+``` python
 n = int(input())
 a = list(map(int, input().split()))
 d = [1]*(n+1)
