11055에 cpp추가하고 헛소리 주 제거

--- a/_posts/2018-08-25-11055.md
+++ b/_posts/2018-08-25-11055.md
@@ -18,11 +18,36 @@ sums = [0]*(n+1)
 
 for i in range(n+1):
     sums[i] = d[i]
-    # 일단 자기 자신만 하면, 길이 1인 수열되니까 그걸 기본 값으로 한다.
     for j in range(i):
         if d[j] < d[i] and sums[i] < d[i] + sums[j]:
             # i번째 보다 작은 수고, 지금 sums값보다 d[i]를 포함한 sums값이 큰 게 있으면
             sums[i] = sums[j] + d[i]
             # 그걸로 바꾼다.
 print(max(sums))
+```
+
+``` c
+#include <iostream>
+#include <algorithm>
+#include <vector>
+using namespace std;
+int main() {
+    int n;
+    cin >> n;
+    vector<int> a(n);
+    for (int i=0; i<n; i++)
+        cin >> a[i];
+
+    vector<int> d(n);
+    for (int i=0; i<n; i++) {
+        d[i] = a[i];
+        for (int j=0; j<i; j++) {
+            if (a[j] < a[i] && d[j]+a[i] > d[i])
+                d[i] = d[j]+a[i];
+
+        }
+    }
+    cout << *max_element(d.begin(),d.end()) << '\n';
+    return 0;
+}
 ```
