--- a/_posts/2018-08-25-11055.md
+++ b/_posts/2018-08-25-11055.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 11055번 : 가장 큰 증가 부분 수열 with python3"
+title: "[백준] 11055번 : 가장 큰 증가 부분 수열 with python3, cpp"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
