--- a/_posts/2018-08-25-11722.md
+++ b/_posts/2018-08-25-11722.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 11722번 : 가장 긴 감소하는 부분 수열 with python3"
+title: "[백준] 11722번 : 가장 긴 감소하는 부분 수열 with python3, cpp"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
@@ -22,4 +22,32 @@ for i in range(n+1):
         if d[j] > d[i] and sequence[i] < sequence[j]+1:
             sequence[i] = sequence[j]+1
 print(max(sequence))
+```
+
+``` cpp
+
+#include <iostream>
+#include <algorithm>
+#include <vector>
+using namespace std;
+int main() {
+    int n;
+    cin >> n;
+    vector<int> a(n);
+    for (int i=0; i<n; i++) {
+        cin >> a[i];
+    }
+    vector<int> d(n);
+    for (int i=0; i<n; i++) {
+        d[i] = 1;
+        for (int j=0; j<i; j++) {
+            if (a[j] > a[i] && d[j]+1 > d[i]) {
+                d[i] = d[j]+1;
+            }
+        }
+    }
+    cout << *max_element(d.begin(),d.end()) << '\n';
+    return 0;
+}
+
 ```
