0일 때도 신경써야 한다. 11722

--- a/_posts/2018-08-25-11722.md
+++ b/_posts/2018-08-25-11722.md
@@ -24,6 +24,25 @@ for i in range(n+1):
 print(max(sequence))
 ```
 
+``` python
+
+n = int(input())
+d = list(map(int, input().split()))
+sequence = [1]*(n+1)
+sequence[0]=0
+# 0일 때도 신경써야 한다
+
+for i in range(n+1):
+    for j in range(i):
+        if d[j] > d[i] and sequence[i] < sequence[j]+1:
+            sequence[i] = sequence[j]+1
+print(max(sequence))
+```
+
+
+
+
+
 ``` cpp
 
 #include <iostream>
