--- a/_posts/2018-08-25-11054.md
+++ b/_posts/2018-08-25-11054.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 11054번 : 가장 긴 바이토닉 부분 수열 with python3"
+title: "[백준] 11054번 : 가장 긴 바이토닉 부분 수열 with python3, cpp"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
@@ -30,4 +30,45 @@ for i in range(n-1, 0, -1):
 for i in range(1,n+1):
     ans[i] = up_sequence[i]+sequence[i] -1
 print(max(ans))
+```
+
+``` cpp
+#include <iostream>
+#include <algorithm>
+#include <vector>
+using namespace std;
+int main() {
+    int n;
+    cin >> n;
+    vector<int> a(n);
+    for (int i=0; i<n; i++) {
+        cin >> a[i];
+    }
+    vector<int> d(n);
+    vector<int> d2(n);
+    for (int i=0; i<n; i++) {
+        d[i] = 1;
+        for (int j=0; j<i; j++) {
+            if (a[j] < a[i] && d[j]+1 > d[i]) {
+                d[i] = d[j]+1;
+            }
+        }
+    }
+    for (int i=n-1; i>=0; i--) {
+        d2[i] = 1;
+        for (int j=i+1; j<n; j++) {
+            if (a[i] > a[j] && d2[j]+1 > d2[i]) {
+                d2[i] = d2[j]+1;
+            }
+        }
+    }
+    vector<int> ans(n);
+    for (int i=0; i<n; i++) {
+        ans[i] = d[i]+d2[i]-1;
+    }
+
+    cout << *max_element(ans.begin(), ans.end()) << '\n';
+    return 0;
+}
+
 ```
