--- a/_posts/2018-09-12-2579.md
+++ b/_posts/2018-09-12-2579.md
@@ -28,3 +28,18 @@ print(max(d[n][2],d[n][1]))
 
 d[i][1], d[i][2]는
 1에는 한번 연속을 때 2는 두번 연속일 때 들어가는 수이다.
+
+``` python
+import sys
+
+n = int(sys.stdin.readline())
+a = [int(sys.stdin.readline()) for i in range(n)]
+a.insert(0,0)
+d = [0]*(n+1)
+
+d[1] = a[1]
+d[2] = a[1]+a[2]
+for i in range(3,n+1):
+    d[i] = max(d[i-2]+a[i], d[i-3]+a[i]+a[i-1])
+print(d[n])
+```
