python으로 algorithm할 때 필요한 꿀

--- a/_posts/2018-08-14-1406.md
+++ b/_posts/2018-08-14-1406.md
@@ -10,7 +10,7 @@ comments: true
 문제 :
 https://www.acmicpc.net/problem/1406
 
-```pyrhon3
+``` python
 import sys
 
 f = lambda : sys.stdin.readline().rstrip()
