--- a/_posts/2018-09-22-2293.md
+++ b/_posts/2018-09-22-2293.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 2293번 : 동전 1 with python3, cpp"
+title: "[백준] 2293번 : 동전 1 with python3"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
