--- a/_posts/2018-09-22-11724.md
+++ b/_posts/2018-09-22-11724.md
@@ -10,28 +10,31 @@ comments: true
 https://www.acmicpc.net/problem/11724
 
 ``` python
-n, k = map(int, input().split())
+import sys
+sys.setrecursionlimit(10**6)
+# n은 10**3인데 for문 두번이랑 같으니 10 **6으로 해야한다
+n, k = map(int, sys.stdin.readline().split())
 # a = [list(map(int, input().split())) for _ in range(k)]
 graph = {}
 for i in range(1,n+1):
-    graph[i] = set()
+  graph[i] = set()
 for _ in range(k):
-    a, b = map(int, input().split())
-    graph[a].add(b)
-    graph[b].add(a)
+  a, b = map(int, sys.stdin.readline().split())
+  graph[a].add(b)
+  graph[b].add(a)
 visited = [False] * (n+1)
 def dfs(v):
-    if visited[v]:
-    # 만약 이미 visited한 거면 return
-        return 0
-    visited[v] = True
-    for i in graph[v]:
-        dfs(i)
-
+  global visited, graph
+  if visited[v]:
+  # 만약 이미 visited한 거면 return
+      return 0
+  visited[v] = True
+  for i in graph[v]:
+      dfs(i)
 ans = 0
 for j in range(1,n+1):
-    if visited[j] == False:
-        dfs(j)
-        ans += 1
+  if visited[j] == False:
+    dfs(j)
+    ans += 1
 print(ans)
 ```
