--- a/_posts/2018-09-27-1707.md
+++ b/_posts/2018-09-27-1707.md
@@ -67,15 +67,20 @@ import sys
 read = lambda : sys.stdin.readline().strip()
 sys.setrecursionlimit(100000)
 
+# 양 끝점의 색이 같은지 다른지를 확인하는 게 없어진다.
 
-def dfs(start, c):
-	check[start] = c
+def dfs(graph, color, start, c):
+	color[start] = c
 	for node in graph[start]:
-		if check[node]==0:
-			if dfs(node, 3-c) == False:
+		if color[node]==0:
+            # 지나간 것
+			if dfs(graph, color, node, 3-c) == False:
+                # 지나간 거여서 그 애와 연관된 애들 것을 확인했는데
+                # 밑에 else쪽에서 나온 것이 False로 나옴으로 이것은 False를 줘야한다.
 				return False
 		else:
-			if check[node]==check[start]:
+			if color[node] == color[start]:
+                # 다음 정점 색과 현제 정점의 색이 같으면 이건 false
 				return False
 	return True
 
@@ -90,13 +95,14 @@ for _ in range(int(read())):
         graph[a].add(b)
         graph[b].add(a)
 
-    check = [0]*(v+1)
-    ok = True
-    for i in range(v):
-    	if check[i+1]==0:
-    		if dfs(i+1, 1)==False:
-    			ok = False
-    			break
-    print("YES" if ok else "NO")
+    color = [0]*(v+1)
+    ok = 'YES'
+    for i in range(1,v+1):
+    	if color[i]==0:
+            # 안간노드만 확인
+            if dfs(graph, color, i, 1) == False:
+                ok = 'NO'
+                break
+    print(ok)
 
 ```
