--- a/_posts/2018-09-27-1707.md
+++ b/_posts/2018-09-27-1707.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 1707번 : 이분 그래프 2 with python3"
+title: "[백준] 1707번 : 이분 그래프 with python3"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
