post 2진수 8진수, 8진수 2진수 with python

--- a/_posts/2018-09-30-1373.md
+++ b/_posts/2018-09-30-1373.md
@@ -1,12 +1,12 @@
-
 ---
 layout: post
 section-type: post
-title: "[백준] 2331번 : 반복수열 with python3"
+title: "[백준] 2331번 : 2진수 8진수 with python3"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
 ---
+
 문제:
 https://www.acmicpc.net/problem/2331
 
