split 1's complement, 2's complement

--- a/_posts/2018-08-19-bit.md
+++ b/_posts/2018-08-19-bit.md
@@ -2,7 +2,7 @@
 layout: post
 section-type: post
 title: "비트란 무엇인가? [ 비트연산(Bitwise operation), 비트마스크(Bitmask) ]"
-categories: Algorithm
+categories: Algorithm, Computer_Science
 tags: [ 'algorithm', 'Bit' ]
 comments: true
 ---
@@ -149,26 +149,9 @@ S + (1 << x)가 아니라 |를 하는 이유는 +를 할 시 이미 존재하는
 1. 모든 경우를 살표봐야 하는데 어떤 길이가 N인 것의 부분집합을 살펴보아야 할 (혹은 완전 탐색 시) 재귀호출 없이 해결할 수 있다.
 2. 상태를 인덱스에 넣어야 하는 다이나믹이 있는, 그 때 사용된다.
 
-
-# 1의 보수, 2의 보수
-
-## 1의 보수,
-0 -> 1 , 1->0 하는 것
-
-앞자리가  1이면 음수고
-        0이면 양수다.
-
-## 2의 보수는, 0과 -0을 구분할 수 없기 때문에 만들어진 것 이다.
-2의 보수는 원래값에 1의 보수를 취하고 1을 더한 것.
-설명:
-0을 1의 보수 취하면 다 1이다. 그러면 이 것은 -0이된다.
-근데 -0은 필요가 없다. 전부 0으로 된 것을 -128을 표현할 수 있게 하기 위해서 그런 것이다.
-그러
-
-
-2의 보수를 하는 이유는, 1의 보수를 할 때는 -0이 불필요하게 들어가 있었는데
--0인 것을 -128로 표현함으로서 그 문제를 해결하게 되었다.
-
+# 보수
+관련 설명은 따로 다른 포스팅에 해 놨따.
+> https://joosjuliet.github.io/2_s_complement/
 
 관련 문제
 > https://www.acmicpc.net/problem/11723
