--- a/_posts/2018-08-19-bit.md
+++ b/_posts/2018-08-19-bit.md
@@ -2,8 +2,8 @@
 layout: post
 section-type: post
 title: "비트란 무엇인가? [ 비트연산(Bitwise operation), 비트마스크(Bitmask) ]"
-categories: Algorithm, Computer_Science
-tags: [ 'algorithm', 'Bit' ]
+categories: Computer_Science
+tags: [ 'computer_science', 'Bit' ]
 comments: true
 ---
 
