페이지 빌드 안되는 이유 디버깅

--- a/_posts/2018-08-19-bit.md
+++ b/_posts/2018-08-19-bit.md
@@ -2,7 +2,7 @@
 layout: post
 section-type: post
 title: "비트란 무엇인가? [ 비트연산(Bitwise operation), 비트마스크(Bitmask) ]"
-categories: Computer_Science
+categories: ComputerScience
 tags: [ 'computer_science', 'Bit' ]
 comments: true
 ---
