--- a/_posts/2018-10-11-1929.md
+++ b/_posts/2018-10-11-1929.md
@@ -10,6 +10,8 @@ comments: true
 문제:
 https://www.acmicpc.net/problem/1929
 
+에라토스테네스의 체로 풀기
+
 ``` python
 import sys
 read = lambda : sys.stdin.readline().strip()
