post 1978 with java

--- a/_posts/2018-10-11-1978.md
+++ b/_posts/2018-10-11-1978.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 1978번 : 소수찾기 with python3"
+title: "[백준] 1978번 : 소수찾기 with python3, java"
 categories: Algorithm
-tags: [ 'algorithm', '백준', '1978' ]
+tags: [ 'algorithm', '백준', 'python', 'java' ]
 comments: true
 ---
 
@@ -31,4 +31,35 @@ for i in a:
         count += 1
 
 print(count)
+```
+
+``` java
+
+import java.util.*;
+public class Main {
+    public static boolean is_prime(int x) {
+        if (x <= 1) {
+            return false;
+        } else if (x == 2) {
+            return true;
+        }
+        for (int i=2; i*i <= x; i++) {
+            if (x % i == 0) {
+                return false;
+            }
+        }
+        return true;
+    }
+    public static void main(String args[]) {
+        Scanner sc = new Scanner(System.in);
+        int n = sc.nextInt();
+        int ans = 0;
+        while (n-- > 0) {
+            if (is_prime(sc.nextInt())) {
+                ans += 1;
+            }
+        }
+        System.out.println(ans);
+    }
+}
 ```
