add bfs solution in 4963 with python3

--- a/_posts/2018-10-13-4963.md
+++ b/_posts/2018-10-13-4963.md
@@ -45,5 +45,44 @@ while True:
 
 # bfs
 ``` python
+import sys
+read = lambda : sys.stdin.readline().strip()
+sys.setrecursionlimit(100000)
+dx = [0, 0, -1, 1, -1, -1, 1, 1]
+dy = [1, -1, 0, 0, 1, -1, -1, 1]
+
+def bfs(matrix, x, y, cnt, n, m):
+    global group
+    q = []
+    q.append([x, y])
+    group[x][y] = cnt
+    while len(q) != 0:
+        p = q.pop()
+        x = p[0]
+        y = p[1]
+        for k in range(8):
+            nx = x + dx[k]
+            ny = y + dy[k]
+            if 0 <= nx and nx < n and 0 <= ny and ny < m:
+                if matrix[nx][ny] == 1 and group[nx][ny] == 0:
+                    q.append([nx, ny])
+                    group[nx][ny] = cnt
+
+while True:
+    m, n = map(int, read().split())
+    if m == n == 0 : break
+    matrix = [list(map(int, read().split())) for _ in range(n)]
+    group = [[0]*m for _ in range(n)]
+
+    cnt = 0
+    for i in range(n):
+        for j in range(m):
+            if matrix[i][j] == 1 and group[i][j] == 0:
+                cnt += 1
+                bfs(matrix, i, j, cnt, n, m)
+
+
+    # print(group)
+    print(cnt)
 
 ```
