refactoring 4963's code  with python3

--- a/_posts/2018-10-13-4963.md
+++ b/_posts/2018-10-13-4963.md
@@ -19,13 +19,13 @@ dx = [0, 0, -1, 1, -1, -1, 1, 1]
 dy = [1, -1, 0, 0, 1, -1, -1, 1]
 
 def dfs(matrix, x, y):
+    global w, h
     matrix[x][y] = 0
     for k in range(8):
         nx = x + dx[k]
         ny = y + dy[k]
         if 0 <= nx and nx < h and 0 <= ny and ny < w:
             if matrix[nx][ny] == 1:
-                # matrix[nx][ny] = 0
                 dfs(matrix, nx, ny)
 while True:
     w, h = map(int, read().split())
@@ -51,36 +51,32 @@ sys.setrecursionlimit(100000)
 dx = [0, 0, -1, 1, -1, -1, 1, 1]
 dy = [1, -1, 0, 0, 1, -1, -1, 1]
 
-def bfs(matrix, x, y, cnt, n, m):
-    global group
-    q = []
-    q.append([x, y])
+def bfs(x, y, cnt):
+    global group, matrix, w, h
+    q = [[x, y]]
     group[x][y] = cnt
     while len(q) != 0:
-        p = q.pop()
-        x = p[0]
-        y = p[1]
+        x, y = q.pop()
         for k in range(8):
             nx = x + dx[k]
             ny = y + dy[k]
-            if 0 <= nx and nx < n and 0 <= ny and ny < m:
+            if 0 <= nx and nx < h and 0 <= ny and ny < w:
                 if matrix[nx][ny] == 1 and group[nx][ny] == 0:
                     q.append([nx, ny])
                     group[nx][ny] = cnt
 
 while True:
-    m, n = map(int, read().split())
-    if m == n == 0 : break
-    matrix = [list(map(int, read().split())) for _ in range(n)]
-    group = [[0]*m for _ in range(n)]
+    w, h = map(int, read().split())
+    if w == h == 0 : break
+    matrix = [list(map(int, read().split())) for _ in range(h)]
+    group = [[0]*w for _ in range(h)]
 
     cnt = 0
-    for i in range(n):
-        for j in range(m):
+    for i in range(h):
+        for j in range(w):
             if matrix[i][j] == 1 and group[i][j] == 0:
                 cnt += 1
-                bfs(matrix, i, j, cnt, n, m)
-
+                bfs(i, j, cnt)
 
     # print(group)
     print(cnt)
