put answer at 1929 with go

--- a/_posts/2018-10-11-1929.md
+++ b/_posts/2018-10-11-1929.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 1929번 : 소수 구하기 with python3"
+title: "[백준] 1929번 : 소수 구하기 with python3, go"
 categories: Algorithm
-tags: [ 'algorithm', '백준', '1929' ]
+tags: [ 'algorithm', '백준', 'python', 'go' ]
 comments: true
 ---
 
@@ -33,4 +33,29 @@ while i * i <= m:
 for k in range(n, m+1):
     if check[k] == False:
         print(k)
+```
+
+``` go
+
+package main
+
+import "fmt"
+
+func main() {
+	var m, n int
+	fmt.Scan(&m, &n)
+	a := make([]bool, n+1)
+	for i := 2; i <= n; i++ {
+		if a[i] {
+			continue
+		}
+		if i >= m {
+			fmt.Println(i)
+		}
+		for j := i * 2; j <= n; j += i {
+			a[j] = true
+		}
+	}
+}
+
 ```
