--- a/_posts/2018-10-11-1929.md
+++ b/_posts/2018-10-11-1929.md
@@ -22,12 +22,14 @@ check[0] = check[1] = True
 i = 2
 while i * i <= m:
     if check[i] == True:
+      # 소수아니다
         i += 1
         continue
     j = i + i
     while j <= m:
         check[j] = True
         j += i
+        # 배수들을 더하는 것이다.
     i += 1
 
 for k in range(n, m+1):
