--- a/_posts/2018-10-12-6588.md
+++ b/_posts/2018-10-12-6588.md
@@ -27,7 +27,9 @@ while i*i <= m:
             check[j]=False # 소수 x
             j +=i
         if i != 2:
+          # i는 소수면서 2가 아닌거
             primes.append(i)
+            # 어차피 위에 while문에서 i가 되기전에 소수 아닌것은 다 check했을 테니 이렇게 해도 된다.
     i += 1
 
 while True:
