put 6588's solution with java

--- a/_posts/2018-10-12-6588.md
+++ b/_posts/2018-10-12-6588.md
@@ -40,3 +40,42 @@ while True:
             print(a, "=", p, "+", a-p)
             break
 ```
+
+
+``` JAVA
+
+import java.util.ArrayList;
+import java.util.Scanner;
+public class Main {
+    private static final int MAX = 1000000;
+    private static final Scanner sc = new Scanner(System.in);
+
+    public static void main(String[] args) {
+        boolean[] check = new boolean[MAX+1];
+        ArrayList<Integer> primes = new ArrayList<Integer>();
+        check[0] = check[1] = true;
+        for (int i=2; i*i <= MAX; i++) {
+            if (check[i] == true) {
+                continue;
+            }
+            primes.add(i);
+            for (int j=i+i; j<=MAX; j+=i) {
+                check[j] = true;
+            }
+        }
+        while (true) {
+            int n = sc.nextInt();
+            if (n == 0) {
+                break;
+            }
+            for (int i=1; i<primes.size(); i++) {
+                int p = primes.get(i);
+                if (check[n - p] == false) {
+                    System.out.println(n + " = " + p + " + " + (n-p));
+                    break;
+                }
+            }
+        }
+    }
+}
+```
