--- a/_posts/2018-10-12-6588.md
+++ b/_posts/2018-10-12-6588.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 6588번 : 골드바흐의 추측 with python3"
+title: "[백준] 6588번 : 골드바흐의 추측 with python3, java"
 categories: Algorithm
-tags: [ 'algorithm', '백준', '6588' ]
+tags: [ 'algorithm', '백준', 'python3', 'java' ]
 comments: true
 ---
 
