--- a/_posts/2018-10-12-11653.md
+++ b/_posts/2018-10-12-11653.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 11653번 : 소인수 분해 with python3"
+title: "[백준] 11653번 : 소인수 분해 with python3, java"
 categories: Algorithm
-tags: [ 'algorithm', '백준', '11653' ]
+tags: [ 'algorithm', '백준', 'python', 'java' ]
 comments: true
 ---
 
@@ -28,4 +28,33 @@ while i*i <= n:
 if n > 1:
   print(n)
 # 미쳐 나누어 떨어지지 않은 것을 알려준다
+```
+
+
+``` JAVA
+import java.util.Scanner;
+
+public class Main {
+
+    private static final Scanner sc = new Scanner(System.in);
+
+    public static void main(String[] args) {
+        int n = sc.nextInt();
+
+        for (int i = 2; i * i <= n; i++) {
+            while (true) {
+                int tmp = n % i;
+                if (tmp != 0) {
+                    break;
+                }
+                System.out.println(i);
+                n /= i;
+            }
+        }
+
+        if (n > 1) {
+            System.out.println(n);
+        }
+    }
+}
 ```
