put 10872's another language solution with java

--- a/_posts/2018-10-12-10872.md
+++ b/_posts/2018-10-12-10872.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 10872번 : 팩토리얼 with python3"
+title: "[백준] 10872번 : 팩토리얼 with python3, java"
 categories: Algorithm
-tags: [ 'algorithm', '백준', '10872' ]
+tags: [ 'algorithm', '백준', 'python', 'java' ]
 comments: true
 ---
 
@@ -19,4 +19,23 @@ for i in range(1, int(read())+1):
   ans *=i
 print(ans)
 
+```
+
+``` JAVA
+import java.util.*;
+
+
+public class Main {
+
+
+    private static Scanner sc = new Scanner(System.in);
+    public static void main(String args[]) {
+        int m = sc.nextInt();
+        int sum = 1;
+        for(int i = 1; i <= m; i++){
+            sum *= i;
+        }
+        System.out.println(sum);
+    }
+}
 ```
