--- a/_posts/2018-10-12-1676.md
+++ b/_posts/2018-10-12-1676.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 1676번 :  팩토리얼 0의 개수 with python3"
+title: "[백준] 1676번 :  팩토리얼 0의 개수 with python3, go"
 categories: Algorithm
-tags: [ 'algorithm', '백준', '1676' ]
+tags: [ 'algorithm', '백준', 'python', 'go' ]
 comments: true
 ---
 
@@ -28,3 +28,22 @@ n을 100으로 볼 때
 5의 배수인 것의 개수를 더한다.
 또 25의 배수인 것들은 5의 배수일 때 하나로 세지기 때문에
 i에 5를 곱하고 그것의 개수만큼 한번 더 더해야한다.
+
+
+``` go
+package main
+
+import "fmt"
+
+func main() {
+  var n int
+	fmt.Scan(&n)
+
+	ans := 0
+	for i := 5; i <= n; i *= 5 {
+		ans += n/i
+	}
+	fmt.Println(ans)
+}
+
+```
