add 2004's solution with go

--- a/_posts/2018-10-12-2004.md
+++ b/_posts/2018-10-12-2004.md
@@ -1,14 +1,16 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 2004번 :  조합 0의 개수 with python3"
+title: "[백준] 2004번 :  조합 0의 개수 with python3, go"
 categories: Algorithm
-tags: [ 'algorithm', '백준', '2004' ]
+tags: [ 'algorithm', '백준', 'python', 'go' ]
 comments: true
 ---
 
 문제:
 https://www.acmicpc.net/problem/2004
+
+
 ``` python
 import sys
 read = lambda : sys.stdin.readline().strip()
@@ -50,4 +52,51 @@ while i <= m:
     i *= 5
 
 print(min(two, five))
+```
+``` go
+package main
+
+import "fmt"
+
+func main() {
+
+  var n, m int
+	fmt.Scanf("%d %d", &n, &m)
+
+	two := 0
+  five := 0
+
+  for i := 2 ; i <= n; i *= 2 {
+    two += n/i
+  }
+  for i := 2 ; i <= (n-m); i *= 2 {
+    two -= (n-m)/i
+  }
+  for i := 2 ; i <= m; i *= 2 {
+    two -= m/i
+  }
+
+  for i := 5 ; i <= n; i *= 5 {
+    five += n/i
+  }
+  for i := 5 ; i <= (n-m); i *= 5 {
+    five -= (n-m)/i
+  }
+  for i := 5 ; i <= m; i *= 5 {
+    five -= m/i
+  }
+
+  ans := 0
+  if five < two {
+    ans = five
+  }else{
+    ans = two
+  }
+
+
+	fmt.Println(ans)
+
+}
+
+
 ```
