post 10824's solution with python

--- a/_posts/2018-10-24-10814.md
+++ b/_posts/2018-10-24-10814.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 section-type: post
-title: "[백준] 1890번 : 점프 with python3"
+title: "[백준] 10814번 : 나이순 정렬 with python3"
 categories: Algorithm
 tags: [ 'algorithm', '백준' ]
 comments: true
 ---
 문제:
-https://www.acmicpc.net/problem/1890
+https://www.acmicpc.net/problem/10814
 
 ``` python
 import sys
