update 10942's solution with python

--- a/_posts/2018-10-25-10942.md
+++ b/_posts/2018-10-25-10942.md
@@ -9,7 +9,6 @@ comments: true
 문제:
 https://www.acmicpc.net/problem/10942
 
-
 ``` python
 import sys
 read = lambda : sys.stdin.readline().strip()
@@ -17,6 +16,7 @@ write = lambda x: sys.stdout.write(str(x)+ "\n")
 
 sys.setrecursionlimit(10**8)
 save = [[-1 for i in range(2001)] for j in range(2001)]
+
 def fel (a,b):
     if save[a][b] != -1:
         return save[a][b]
@@ -29,12 +29,10 @@ def fel (a,b):
         save[a][b] = fel(a+1, b-1)
         return save[a][b]
 
-
-trash = input()
-seq = sys.stdin.readline().split()
-times= int(input())
-for i in range(times):
-   ap, dui = map(int, sys.stdin.readline().split())
-   write(fel(ap-1,dui-1))
+read()
+seq = read().split()
+for i in range(int(read())):
+  ap, dui = map(int, read().split())
+  write(fel(ap-1, dui-1))
 
 ```
