put 10942's bottom-up and top-down solution with python

--- a/_posts/2018-10-25-10942.md
+++ b/_posts/2018-10-25-10942.md
@@ -9,6 +9,85 @@ comments: true
 문제:
 https://www.acmicpc.net/problem/10942
 
+# top-down solution
+
+
+``` python
+import sys
+read = lambda : sys.stdin.readline().strip()
+write = lambda x: sys.stdout.write(str(x)+ "\n")
+
+sys.setrecursionlimit(10**8)
+d = [[-1 for i in range(2001)] for j in range(2001)]
+# d[i+1][j-1]
+# i+1부터 j-1까지 펠린드롭인지 아닌지 확인하는 것
+def fel (x, y):
+    if x == y:
+        return 1
+    elif x+1 == y:
+        # 글자가 두잘일 때
+        if a[x] == a[y]:
+            return 1
+        else:
+            return 0
+
+    if d[x][y] != -1:
+        return d[x][y]
+
+    if a[x] != a[y]:
+        d[x][y] = 0
+        return d[x][y]
+    else:
+        d[x][y] = fel(x+1, y-1)
+        return d[x][y]
+
+
+read()
+a = read().split()
+for i in range(int(read())):
+  ap, dui = map(int, read().split())
+  if fel(ap-1, dui-1) == False:
+      write(0)
+  else:
+      write(1)
+```
+
+# bottom-up solution
+
+``` python
+import sys
+read = lambda : sys.stdin.readline().strip()
+write = lambda x: sys.stdout.write(str(x)+ "\n")
+
+d = [[False for _ in range(2001)] for _ in range(2001)]
+# d[i+1][j-1]
+# i+1부터 j-1까지 펠린드롭인지 아닌지 확인하는 것
+n = int(read())
+a = read().split()
+
+for i in range(n):
+    d[i][i] = True
+
+for j in range(n-1):
+    if a[j] == a[j+1]:
+        d[j][j+1] = True
+
+for k in range(2, n):
+    for i in range(0, n-k):
+        j = i + k
+        if (a[i] == a[j]) and d[i+1][j-1]:
+            d[i][j] = True
+
+for _ in range(int(read())):
+    s, e = map(int, read().split())
+    if d[s-1][e-1]:
+        write(1)
+    else:
+        write(0)
+
+```
+# solution 2
+
 ``` python
 import sys
 read = lambda : sys.stdin.readline().strip()
