put 10942's solution with python

--- a/_posts/2018-10-25-10942.md
+++ b/_posts/2018-10-25-10942.md
@@ -24,8 +24,9 @@ d = [[-1 for i in range(2001)] for j in range(2001)]
 def fel (x, y):
     if x == y:
         return 1
+        # 길이가 1일 때
     elif x+1 == y:
-        # 글자가 두잘일 때
+        # 글자가 2일 때
         if a[x] == a[y]:
             return 1
         else:
@@ -33,11 +34,14 @@ def fel (x, y):
 
     if d[x][y] != -1:
         return d[x][y]
+        # memoization
 
     if a[x] != a[y]:
+      # x와 y가 같지않으면 바로 0준다.
         d[x][y] = 0
         return d[x][y]
     else:
+      # 같다면 이제 그속의 다른 애들도 같나 확인을 하기 위해 recursive돈다
         d[x][y] = fel(x+1, y-1)
         return d[x][y]
 
@@ -59,32 +63,38 @@ import sys
 read = lambda : sys.stdin.readline().strip()
 write = lambda x: sys.stdout.write(str(x)+ "\n")
 
-d = [[False for _ in range(2001)] for _ in range(2001)]
-# d[i+1][j-1]
-# i+1부터 j-1까지 펠린드롭인지 아닌지 확인하는 것
-n = int(read())
-a = read().split()
+a = read()
+n = len(a)
 
-for i in range(n):
-    d[i][i] = True
+dp = [[0 for i in range(n + 1)]for j in range(n + 1)]
+result = [0] + [sys.maxsize] * (n)
 
-for j in range(n-1):
-    if a[j] == a[j+1]:
-        d[j][j+1] = True
+for i in range(1, n+1):
+    dp[i][i] = 1
+    # 길이가 1인것
+    # i부터 i까지의 것중 palindrome 개수니까
 
-for k in range(2, n):
-    for i in range(0, n-k):
-        j = i + k
-        if (a[i] == a[j]) and d[i+1][j-1]:
-            d[i][j] = True
+for i in range(1, n):
+    if a[i-1] == a[i]:
+        dp[i][i+1] = 1
+        # 길이가 2인 것
 
-for _ in range(int(read())):
-    s, e = map(int, read().split())
-    if d[s-1][e-1]:
-        write(1)
-    else:
-        write(0)
+for i in range(2, n):
+    for j in range(1, n+1-i):
+        if a[j-1] == a[i+j-1] and dp[j+1][i+j-1] == 1:
+            dp[j][i+j] = 1
+# 다양한 길이일 때를 세는 것이다.
+# 길이가 i 부터 j까지 길이가 k인 것
+# 수치로 하면 i+j-1이다.
+#  i ---- k --- p 임으로 p는 i+j-1이 되기 때문이다.
 
+for i in range(1, n+1):
+    result[i] = min(result[i], result[i-1] + 1)
+    for j in range(i+1, n+1):
+        if dp[i][j] != 0:
+            result[j] = min(result[j], result[i-1] + 1)
+
+print(result[n])
 ```
 # solution 2
 
