--- a/_posts/2018-09-22-2293.md
+++ b/_posts/2018-09-22-2293.md
@@ -10,18 +10,17 @@ comments: true
 https://www.acmicpc.net/problem/2293
 
 ``` python
-n,k = map(int, input().split())
-a = [int(input()) for _ in range(n)]
-# a list를 돌기 위한 for문
+import sys
+read = lambda : sys.stdin.readline().strip()
+write = lambda x: sys.stdout.write(str(x)+ "\n")
 
-a.insert(0,0)
-d = [0]*(k+1)
-d[0] = 1
+n,k = map(int, read().split())
+a = [0]+[int(read()) for _ in range(n)]
+d = [1]+[0]*(k)
 for i in range(1,n+1):
     for j in range(a[i], k+1):
-        # 일단 여기왔을 때는 이 수 보다 작은 것들은 다 이미 채워져 있다.
-        # a가 작은 순으로 들어왔다고 가정하면
-
+    # 일단 여기왔을 때는 이 수 보다 작은 것들은 다 이미 채워져 있다.
+    # a가 작은 순으로 들어왔다고 가정하면
         d[j] += d[j-a[i]]
         # 이건 일정 간격으로 횟수를 더하기 위해 만든 것
         # 나의 의문은 1 씩 느는 것은 알겠는데 2(a[i]의 예)씩 느는 것은 어쩌냐 였는데
@@ -29,5 +28,6 @@ for i in range(1,n+1):
         # a[i]보다 작은 것은 어차피 할 필요 없고 수의 끝까지 해야하기 때문에
         # 범위는 (a[i], k+1)이다.
 print(d[k])
+
 
 ```
