update 2293's using 2 matrix solution and explanation with python

--- a/_posts/2018-09-22-2293.md
+++ b/_posts/2018-09-22-2293.md
@@ -31,3 +31,48 @@ print(d[k])
 
 
 ```
+
+
+
+<img alt="success" src = "/images/2018-09-22-2293/recurrence_formula.png"/>
+
+d[i][j]
+j번째 동전까지 시행
+
+첫 번째 동전만 썼을 경우의 수를 다 만들고
+그다음에 첫번째와두번째 동전만 썼을 경우의 수를 다 만들고
+이런식으로 순차적으로 가는 것이다.
+
+<img alt="success" src = "/images/2018-09-22-2293/table.png"/>
+
+
+
+
+``` python
+import sys
+read = lambda : sys.stdin.readline().strip()
+write = lambda x: sys.stdout.write(str(x)+ "\n")
+
+n, k = map(int, read().split())
+d = [[0]*(101) for _ in range(1001)]
+c = [0]+[int(read()) for _ in range(n)]
+
+for i in range(n+1):
+    d[i][0] = 1
+    # 기본값 0으로 만들기
+
+for i in range(1, n+1):
+    for j in range(1, k+1):
+        if j-c[i] < 0:
+          # 만들고자 하는 가격이 coin가격보다 작으면 넣는 것이다.
+            d[i][j] = d[i-1][j]
+        else:
+            d[i][j] = d[i-1][j] + d[i][j-c[i]]
+write(d[n][k])
+
+```
+
+
+----
+참고자료
+http://learn-programming.tistory.com/28
