update graph code

--- a/_posts/2018-09-12-graph.md
+++ b/_posts/2018-09-12-graph.md
@@ -104,7 +104,7 @@ def dfs(v):
     return 0
   print(v)
   visited[v] = True
-  for i in graph[v]:
+  for i in sorted(graph[v]):
     dfs(i)
 dfs(v)
 # dfs답 : 1 2 4 3
@@ -192,4 +192,6 @@ while que:
       chk.add(u)
 print()
 ```
+
+chk를 그냥 set으로 해봤는데... 사실 list는 가져오는데 O(1)이어서 딱히 의미는 없다
 <!-- http://manducku.tistory.com/23?category=683258 -->
