add solution 2 about binary search tree with python

--- a/_posts/2018-11-09-10815.md
+++ b/_posts/2018-11-09-10815.md
@@ -9,6 +9,9 @@ comments: true
 문제:
 https://www.acmicpc.net/problem/10815
 
+# solution 1
+set 써서 하기
+
 ``` python
 input()
 n = set(map(int, input().split()))
@@ -20,4 +23,33 @@ for i in m:
         print(1, end=' ')
     else:
         print(0, end=' ')
+```
+
+# solution 2
+이진탐색 하기
+
+``` python
+
+n = int(input())
+a = list(map(int, input().split()))
+a.sort()
+
+def binary_search(num):
+    l = 0
+    r = n-1
+    while l <= r :
+        mid = (l+r)//2
+        if a[mid] == num :
+            return 1
+        elif a[mid] > num :
+            r = mid - 1
+            # 반 줄여주기 1
+        else:
+            l = mid + 1
+            # 반 줄여주기 2
+    return 0
+
+input()
+for num in list(map(int, input().split())):
+    print(binary_search(num), end = ' ')
 ```
