update 11724's and 1707's solution with python

--- a/_posts/2018-09-27-1707.md
+++ b/_posts/2018-09-27-1707.md
@@ -19,11 +19,11 @@ import sys
 read = lambda : sys.stdin.readline().strip()
 sys.setrecursionlimit(100000)
 
-def dfs(graph, color, x, c):
-    color[x] = c
+def coloring_dfs(graph, colorted, x, c):
+    colorted[x] = c
     for y in graph[x]:
-        if color[y] == 0:
-            dfs(graph, color, y, 3-c)
+        if colorted[y] == 0:
+            coloring_dfs(graph, colorted, y, 3-c)
 
 
 def make_graph(v, e):
@@ -40,23 +40,24 @@ def make_graph(v, e):
 def solution():
     v, e = map(int, read().split())
     graph = make_graph(v, e)
-    color = [0]*(v+1)
-    ok = 'YES'
+    colorted = [0]*(v+1)
+    ans = 'YES'
 
     for i in range(1, v+1):
-        if color[i] == 0:
-            dfs(graph, color, i, 1)
+        if colorted[i] == 0:
+            coloring_dfs(graph, colorted, i, 1)
             # 1로 일단 무조건 하고 dfs속에서는 2하나만 하게하고 끝내는 건가
 
     for i in range(1, v+1):
         for j in graph[i]:
-            if color[i] == color[j]:
-                ok = 'NO'
+            if colorted[i] == colorted[j]:
+                ans = 'NO'
+                break
 
-    print(ok)
+    return ans
 
 for i in range(int(read())):
-    solution()
+    print(solution())
 
 ```
 
