update 2667 and 4963's solution

--- a/_posts/2018-10-12-2667.md
+++ b/_posts/2018-10-12-2667.md
@@ -3,7 +3,7 @@ layout: post
 section-type: post
 title: "[백준] 2667번 : 단지번호붙이기 with python3"
 categories: Algorithm
-tags: [ 'algorithm', '백준', '2667' ]
+tags: [ 'algorithm', '백준', 'python' ]
 comments: true
 ---
 
