--- a/_posts/2018-10-13-4963.md
+++ b/_posts/2018-10-13-4963.md
@@ -18,15 +18,14 @@ sys.setrecursionlimit(100000)
 dx = [0, 0, -1, 1, -1, -1, 1, 1]
 dy = [1, -1, 0, 0, 1, -1, -1, 1]
 
-def dfs(matrix, x, y):
-    global w, h
+def dfs(matrix, x, y, w, h):
     matrix[x][y] = 0
     for k in range(8):
         nx = x + dx[k]
         ny = y + dy[k]
         if 0 <= nx and nx < h and 0 <= ny and ny < w:
             if matrix[nx][ny] == 1:
-                dfs(matrix, nx, ny)
+                dfs(matrix, nx, ny, w, h)
 while True:
     w, h = map(int, read().split())
     if w == h == 0 : break
@@ -37,7 +36,7 @@ while True:
     for i in range(h):
         for j in range(w):
             if matrix[i][j] == 1:
-                dfs(matrix, i, j)
+                dfs(matrix, i, j, w, h)
                 cnt += 1
     print(cnt)
 ```
@@ -51,8 +50,7 @@ sys.setrecursionlimit(100000)
 dx = [0, 0, -1, 1, -1, -1, 1, 1]
 dy = [1, -1, 0, 0, 1, -1, -1, 1]
 
-def bfs(x, y, cnt):
-    global group, matrix, w, h
+def bfs(group, matrix, w, h, x, y, cnt):
     q = [[x, y]]
     group[x][y] = cnt
     while len(q) != 0:
@@ -76,7 +74,7 @@ while True:
         for j in range(w):
             if matrix[i][j] == 1 and group[i][j] == 0:
                 cnt += 1
-                bfs(i, j, cnt)
+                bfs(group, matrix, w, h, i, j, cnt)
 
     # print(group)
     print(cnt)
