--- a/_posts/2018-11-29-layer3.md
+++ b/_posts/2018-11-29-layer3.md
@@ -3,7 +3,7 @@ layout: post
 section-type: post
 title: "[Network 1일차] ip란 무엇인가 (layer 3)"
 category: Computer_Science
-tags: [ 'computer_science', 'os', '글또' ]
+tags: [ 'computer_science', '글또1기', 'network' ]
 comments: true
 ---
 
