--- a/_posts/2018-11-25-os1.md
+++ b/_posts/2018-11-25-os1.md
@@ -3,7 +3,7 @@ layout: post
 section-type: post
 title: "[OS 1일차] 다양한 운영체제 ( feat. Batch System, Multiprogrammed system, Multiprocessing system, Real time system, Distributed processing system )"
 category: Computer_Science
-tags: [ 'computer_science', 'os', '글또' ]
+tags: [ 'computer_science', 'os', '글또2기' ]
 comments: true
 ---
 
