--- a/_posts/2018-11-16-samsung1206.md
+++ b/_posts/2018-11-16-samsung1206.md
@@ -79,3 +79,52 @@ public class Solution {
     }
 }
 ```
+
+
+``` java
+
+package project;
+import java.util.Scanner;
+
+public class Main {
+	static Scanner sc = new Scanner(System.in);
+
+	public static void countViewRight(int[] building){
+		int viewRight = 0;
+
+		for(int i = 2 ; i<building.length-2; i++){
+			int boundaryTallBuilding = Math.max( Math.max(building[i-2],building[i-1]), Math.max(building[i+1],building[i+2]) );
+			int difference = building[i] - boundaryTallBuilding;
+			if( difference > 0){
+				viewRight += difference;
+			}			
+		}
+
+		System.out.println("viewRight"+viewRight);
+
+	}
+
+	public static void solved(){
+		// int buildingCount = sc.nextInt();
+		int buildingCount = 9;
+		int[] building = new int[buildingCount];
+
+		for(int i =0; i < building.length; i++){
+			if( (i == 0) || (i == 1) || (i == buildingCount-2) || (i == buildingCount-1)){
+				building[i] = 0;
+			} else{
+				building[i] = sc.nextInt();
+			}
+		}
+		countViewRight(building);
+	}
+	public static void main(String args[]) {
+		// int testCase = sc.nextInt();
+		int testCase = 1;
+		for(int i=0; i<testCase;i++){
+			solved();
+		}
+	}
+
+}
+```
