--- a/_posts/2018-09-11-1991.md
+++ b/_posts/2018-09-11-1991.md
@@ -13,7 +13,7 @@ https://www.acmicpc.net/problem/1991
 left={}
 right={}
 for _ in range(int(input())):
-    c,l,r=map(str,input().split())
+    c,l,r=input().split()
     left[c]=l
     right[c]=r
 
