--- a/_posts/2018-12-18-what_am_i_do_2019.md
+++ b/_posts/2018-12-18-what_am_i_do_2019.md
@@ -13,6 +13,7 @@ comments: true
 근데 2019년도 계획은 모두 2018년에 해낸 것들을 기반으로 나아가서 묘하게 회고글이기도 하네요!
 상반기 계획으로 한 이유는... 전 장기계획은 못지켜서 상반기입니다!
 
+
 # 1. 개발글의 퀄리티를 높이자!
 - network와 os 글을 시리즈로 잘 완성시켜보자
 
@@ -24,14 +25,13 @@ comments: true
 
 
 # 2. 일주일에 한번은 알고리즘을 go로 풀어보자!
-- hacker rank 하루에 한문제씩 풀자
-- 올해 백준 100개 풀기
+- hacker rank 하루에 medium 한문제씩 풀기
 
 18년도에는 python의 실력을 키우는게 목표였는데, 어느정도 이룬 것 같습니다.
 계속 하다보니, 어느새 새로운 문법을 찾아내는 상황은 한달에 한번도 있을 까 말까 하더라고요.
 
-현제 관심있는 시스템 프로그래밍, docker, blockchain 에서는 go를 쓰는게 일반적입니다.
-그래서 go에 관련된 실력을 키우고 싶어졌습니다.
+현제 관심있는 시스템 프로그래밍, docker, blockchain 에서는 go를 쓰는게 일반적입니다. 그래서 go에 관련된 실력을 키우고 싶어졌습니다.
+이번년도에 blockchain 프로젝트로 go 포폴을 만들기는 했으나 실력을 더 키우고 싶습니다.
 
 그리고 알고리즘은 요즘은 경력직 면접에도 다 물어봐서 꾸준히 해야 좋은 것 같습니다.
 또 블록체인 때는 tree를 많이 쓰고, ai에서는 graph를 많이 쓰고...
