글 여러개 업데이트

--- a/_posts/2018-12-18-what_am_i_do_2019.md
+++ b/_posts/2018-12-18-what_am_i_do_2019.md
@@ -7,12 +7,25 @@ tags: [ '글또 2기' ]
 comments: true
 ---
 
-글또 분들 사이에 회고글을 쓰자는 얘기가 나왔지만!
-앞으로 나아갈 미래를 생각하며 설레하는 것을 더 좋아해서 2019년 상반기 계획을 세우기로 했습니다!
+앞으로 나아갈 미래를 생각하며 설레하는 것을 좋아해 2019년 상반기 계획 글을 쓰기로 했습니다!
 
 근데 2019년도 계획은 모두 2018년에 해낸 것들을 기반으로 나아가서 묘하게 회고글이기도 하네요!
 상반기 계획으로 한 이유는... 전 장기계획은 못지켜서 상반기입니다!
 
+
+# 2018년에 이룬것
+
+- python 실력 키우기
+- django로 이력만들기
+- vue로 이력만들기
+- 백준 100문제 풀기 (아직 7문제 남았따)
+- google codejam kickstart 1문제 풀기
+- 글 올리는 습관만들기
+- 꾸준히 운동하는 습관 만들기
+- go로 프로젝트 하나하기
+- 새로운 개발프로젝트 하기 (it-chain)
+- kosslab에서 it-chain 프로젝트로 장려상받기
+- 토익스피킹 6급 따기
 
 # 1. 개발글의 퀄리티를 높이자!
 - network와 os 글을 시리즈로 잘 완성시켜보자
@@ -25,6 +38,7 @@ comments: true
 
 
 # 2. 일주일에 한번은 알고리즘을 go로 풀어보자!
+- google codejam kickstart 2문제 풀기
 - hacker rank 하루에 medium 한문제씩 풀기
 
 18년도에는 python의 실력을 키우는게 목표였는데, 어느정도 이룬 것 같습니다.
@@ -57,3 +71,7 @@ hacker rank를 풀면서 어느정도 영어실력이 정체라도(?) 되는 것
 
 # 5. 건강한 식습관과 멘탈을 갖자!
 식습관과 멘탈은 계속 노력해야만 하는 것 같습니다. 그 사실을 인지하는게 가장 중요한 것 같아요.
+
+
+# 6. 운전면허 따기
+이제 도로주행 남았는데... 전 정말 게으른 것 같아요.
