--- a/_posts/2018-12-18-what_am_i_do_2019.md
+++ b/_posts/2018-12-18-what_am_i_do_2019.md
@@ -12,9 +12,13 @@ comments: true
 근데 2019년도 계획은 모두 2018년에 해낸 것들을 기반으로 나아가서 묘하게 회고글이기도 하네요!
 상반기 계획으로 한 이유는... 전 장기계획은 못지켜서 상반기입니다!
 
+# 2018년도 한줄
+- 개발자로서도 인간으로서도 내가 원하던 습관들을 잘 다듬은 한해였다.
+
+# 2019년도 목표 한줄
+- 잘 다듬은 습관을 가지고 이제 능력치를 극대화 시켜보자!
 
 # 2018년에 이룬것
-
 - python 실력 키우기
 - django로 이력만들기
 - vue로 이력만들기
@@ -26,6 +30,8 @@ comments: true
 - 새로운 개발프로젝트 하기 (it-chain)
 - kosslab에서 it-chain 프로젝트로 장려상받기
 - 토익스피킹 6급 따기
+
+아무것도 안한 것 같았는데... 은근 쓰다 보니 많은 것을 이루었더라고요.
 
 # 1. 개발글의 퀄리티를 높이자!
 - network와 os 글을 시리즈로 잘 완성시켜보자
@@ -56,16 +62,20 @@ comments: true
 - 새로운 일을 할 때마다 resume 관리를 잘하자
 
 너무 귀찮지만 관련글을 블로그에 잘 써놓는 것 역시 중요한 것 같아요.
-면접 때 다 물어보는데 너무 오래되서 아무것도 면접 직전에 다시 다 찾아보느라 정말 괴로웠습니다.
+면접 때 다 물어보는데 너무 오래되서 면접 직전에 다시 다 찾아보느라 정말 괴로웠습니다.
 
 
 # 4. 하루 10분 쉐도잉과 하루 100개 스쿼트
+- 비만에서 경도 비만으로 가기
+
 *원래 계획에 영어와 운동은 언제나 있는 것 아닌가요(...)*
 hacker rank를 풀면서 어느정도 영어실력이 정체라도(?) 되는 것 같아서 만족스럽긴 합니다.
 영어 실력을 키우기 위해서 올해 영어로 글 써보기를 하려고 했었는데 현실은 한국말도 못하는(...)
 일단 영어는 하루에 10분 쉐도잉 하는 걸 목표로 세워 보려고 합니다.
 
+몸무게나 외관상 몸은 괜찮지만 부족한 근육 덕분에 무려 전 비만입니다.(비밍아웃)
 18년도에 열심히 노력한 결과 운동은 어느정도 습관이 붙어서 몸상태가 좋고 시간이 빠듯하지 않은한 헬스장을 꾸준히 가긴 합니다.
+그치만 근육 키우기가 쉽지 않더라고요(...) 열심히 노력해서 6개월동안 1kg의 근육을 키우고 아파서 이주일 만에 2kg 빠졌습니다.
 요즘 youtube에서 스쿼트 100일 100개 챌린지를 뷰티유튜버와 하는데, 뿌듯하고 습관도 형성되서 19년도에 꼭 이어 나가려 합니다.
 
 
