fix broken english

--- a/_posts/2018-10-24-tim_sort.md
+++ b/_posts/2018-10-24-tim_sort.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 section-type: post
-title: "(작성중) [python] python의 기본 sort time_sort란!"
+title: "(작성중) [python] python의 기본 sort tim_sort란!"
 categories: Python
-tags: [ 'Python3', 'time_sort', 'python' ]
+tags: [ 'Python3', 'tim_sort', 'python' ]
 comments: true
 ---
 
@@ -18,7 +18,7 @@ Best case performance   O(n)
 Average case performance    O(nlogn)
 Worst case space complexity O(n)
 
-python에서 쓰는 sort는 *time_sort* 이다.
+python에서 쓰는 sort는 *tim_sort* 이다.
 
 
 
