--- a/_posts/2018-11-23-2448.md
+++ b/_posts/2018-11-23-2448.md
@@ -7,8 +7,8 @@ tags: [ 'algorithm', '백준', 'java', 'java8' ]
 comments: true
 ---
 
-일반 영역 <span class="evidence">형광펜이 칠해지는 영역</span> 일반 영역
-<div class="breaker">?!?!?!?!</div>
+일반 영역 <span class="evidence">형광펜이 칠해지는 영역</span> <b>Hello</b>
+<div class="breaker"></div>
 ~~cancelline~~
 
 
