change categories and upgrade readable

--- a/_posts/2018-11-25-os1.md
+++ b/_posts/2018-11-25-os1.md
@@ -2,8 +2,8 @@
 layout: post
 section-type: post
 title: "[OS 1일차] 다양한 운영체제 ( feat. Batch System, Multiprogrammed system, Multiprocessing system, Real time system, Distributed processing system )"
-category: Computer_Science
-tags: [ 'computer_science', 'os', '글또2기' ]
+category: OS
+tags: [ 'computer_science', 'OS', '글또2기' ]
 comments: true
 ---
 
@@ -16,7 +16,7 @@ comments: true
 
 
 # Batch System
-<b> 컴퓨터 프로그램 흐름에 따라 순차적으로 자료를 처리하는 방식 </b>
+<span style="background-color:yellow"> 컴퓨터 프로그램 흐름에 따라 순차적으로 자료를 처리하는 방식 </span>
 
 system의 실행시간을 최대한 정확히 예측하는 장점을 가지고 있다. 하나의 작업이 끝나기 전까지는 다른 작업을 할 수 없다.
 
@@ -67,7 +67,7 @@ CPU는 최대한 쉬는 시간 없이 사용해야 효율적이다.
 
 
 # 실시간 시스템(Real time system)
-<b> 단말기나 제어 대상으로부터 처리를 요구하는 자료가 발생할 때마다 즉시 처리하여 그 결과를 출력하거나 요구에 대하여 응답하는 방식 </b>
+<span style="background-color:yellow"> 단말기나 제어 대상으로부터 처리를 요구하는 자료가 발생할 때마다 즉시 처리하여 그 결과를 출력하거나 요구에 대하여 응답하는 방식 </span>
 
 실시간 시스템의 특징
 - 자료가 발생한 지점에서 단말기를 통하여 직접 입/출력되므로 사용자의 노력이 절감한다.
@@ -75,7 +75,7 @@ CPU는 최대한 쉬는 시간 없이 사용해야 효율적이다.
 - 자료가 무작위하게 도착하므로 입/출력 자료의 일시 저장과 대기가 필요하다.
 
 # 분산 처리 시스템(Distributed processing system)
-<b> 하나의 대형 컴퓨터에서 수행하던 기능을 통신망을 통하여 상호간에 교신하고 처리하는 방식으로 자료 처리 시스템들의 상호연결은 컴퓨터 네트워크에 의해 이루어진다. </b>
+<span style="background-color:yellow"> 하나의 대형 컴퓨터에서 수행하던 기능을 통신망을 통하여 상호간에 교신하고 처리하는 방식으로 자료 처리 시스템들의 상호연결은 컴퓨터 네트워크에 의해 이루어진다. </span>
 
 <img alt="success" src = "https://www.dropbox.com/s/xubnr5ggmf29y3b/Screenshot%202018-11-25%2023.54.26.png?raw=1"/>
 
