--- a/_posts/2018-11-23-2448.md
+++ b/_posts/2018-11-23-2448.md
@@ -69,31 +69,42 @@ public class Main {
 
 # solution 2
 
-이것도 시간초과 실화(...)
 
 ``` java
-
 import java.util.*;
 public class Main {
     static String[] starMap;
-    public static void main(String[] args){
+    public static void main(String[] args) {
         Scanner sc = new Scanner(System.in);
         int n = sc.nextInt();
+        sc.close();
 
-        starMap = new String [n];
+        String starMap[] = new String[n];
         starMap[0] = "  *  ";
         starMap[1] = " * * ";
         starMap[2] = "*****";
-        for(int i = 3;i<n;i = i * 2){
-            for(int j = 0; j<i;j++){
-                starMap[j+i] = starMap[j]+" "+starMap[j];
-                for(int k = 0; k<i;k++)
-                    starMap[j] = " " + starMap[j] + " ";
+
+        for (int i = 1; 3 * (int)Math.pow(2, i) <= n; ++i) {
+            int bottom = 3 * (int)Math.pow(2, i);
+            int middle = bottom / 2;
+
+            for (int j = middle; j < bottom; ++j) {
+                starMap[j] = starMap[j - middle] + " " + starMap[j - middle];
+                // 전의 것을 가져와서 두배로 만들어서 낸다.
+            }
+
+            // 적합한 위치로 보내는 코드
+            String space = String.join("", Collections.nCopies(middle," "));            
+            for (int j = 0; j < middle; ++j) {
+                starMap[j] = space + starMap[j] + space;
             }
         }
-        for(int i = 0; i<n;i++){
+
+        for (int i = 0; i < n; ++i) {
             System.out.println(starMap[i]);
         }
     }
+
+
 }
 ```
