--- a/_posts/2019-01-07-index.md
+++ b/_posts/2019-01-07-index.md
@@ -7,9 +7,10 @@ tags: [ 'DB', 'database', 'index', 'computer_science' ]
 comments: true
 ---
 
-이 컨텐츠는 시리즈물입니다.
-[db index 1편] index 란?: https://joosjuliet.github.io/index/
-[db index 2편] index structure란?: https://joosjuliet.github.io/index_structure/
+이 컨텐츠는 시리즈물입니다.  
+[db index 1편] index 란?:  
+https://joosjuliet.github.io/index/  
+[db index 2편] index structure란?:   https://joosjuliet.github.io/index_structure/  
 
 # Index란?
 <span style="background-color:yellow"><b>records의 특정 data를 기준으로 빠르게 검색을 할 수 있게 records를 구조화 하는 것</b></span>
@@ -95,16 +96,14 @@ comments: true
 - 그로 인한 *단점으로 I/O가 자주 일어난다.*
 
 
-
-
 ---
-참고 :
-https://en.wikipedia.org/wiki/Database_index
-https://www.tutorialspoint.com/dbms/dbms_indexing.htm
-http://web.cs.ucdavis.edu/~green/courses/ecs165a-w11/7-indexes.pdf
-http://mee2ro.tistory.com/2 [Meero]
+참고 :  
+https://en.wikipedia.org/wiki/Database_index  
+https://www.tutorialspoint.com/dbms/dbms_indexing.htm  
+http://web.cs.ucdavis.edu/~green/courses/ecs165a-w11/7-indexes.pdf  
+http://mee2ro.tistory.com/2 [Meero]  
 
-데이터베이스 배움터
-친구 데이터베이스 수업 자료
-결합 인덱스 : http://dinggur.tistory.com/228
-http://mee2ro.tistory.com/2
+데이터베이스 배움터  
+친구 데이터베이스 수업 자료  
+결합 인덱스 : http://dinggur.tistory.com/228  
+http://mee2ro.tistory.com/2  
