2448 참고자료 추가

--- a/_posts/2018-11-23-2448.md
+++ b/_posts/2018-11-23-2448.md
@@ -16,6 +16,8 @@ comments: true
 cpp로는 되는 로직인데.. 왜 java로 하면 시간초과 되는지 모르겠다.
 그래서 되는 로직은 밑에 썼다.
 
+참고영상:
+https://www.youtube.com/watch?v=WjmEVp-Lgns&feature=youtu.be
 ``` java
 package com.company;
 
